# rinbot

./: .dockerignore  .env.dev  .env.prod  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt  utils.py
rinbot/plugins/bangumi/: __init__.py
rinbot/plugins/base/: __init__.py
rinbot/plugins/bupt/: __init__.py  config.py
rinbot/plugins/maimaidx/: LICENSE  README.md  __init__.py
rinbot/plugins/maimaidx/libraries/: image.py  maimai_best_40.py  maimai_best_50.py  maimaidx_music.py  tool.py
rinbot/plugins/maimaidx/plugins/: maimaidx.py  public.py
rinbot/plugins/sdvx/: __init__.py  config.py  data_source.py
