[project]
name = "rinbot-new"
version = "0.1.0"
description = "rinbot-new"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = []
plugin_dirs = ["rinbot/plugins", "rinbot/plugins/imgsearch"]
builtin_plugins = ["echo"]
