[project]
name = "rinbot-new"
version = "0.2.0"
description = "rinbot"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = [
    "rinbot/plugins",
    "rinbot/plugins/maimaidx/plugins",
    "rinbot/plugins/imgsearch",
    "rinbot/plugins/nonebot-plugin-deepseek"]
builtin_plugins = ["echo"]
